--- a/app/templates/scientists.hbs
+++ b/app/templates/scientists.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<h2>List of scientists</h2>
+
+<ul>
+  {{#each this.model as |scientist|}}
+    <li>{{ scientist }}</li>
+  {{/each}}
+</ul>
